[package]
name = "threematrix"
version = "0.1.0"
edition = "2021"

[dependencies]
threema-gateway = "0.15.1"
tokio = { version = "1", features = ["full"] }
actix-web = "4"
rand = "0.8.5"
toml = "0.5.9"
serde = "1.0.137"
serde_derive = "^1.0"
matrix-sdk = "0.5.0"
signal-hook = "0.3.14"
signal-hook-tokio = { features = ["futures-v0_3"], version = "0.3.1" }
futures = "0.3.21"
