[package]
name = "threematrix"
version = "0.1.1"
edition = "2021"

[dependencies]
threema-gateway = "0.15.1"
tokio = { version = "1", features = ["full"] }
actix-web = "4"
rand = "0.8.5"
toml = "0.5.9"
serde = "1.0.137"
serde_derive = "^1.0"
matrix-sdk = { git = "https://github.com/matrix-org/matrix-rust-sdk.git" }
signal-hook = "0.3.14"
signal-hook-tokio = { features = ["futures-v0_3"], version = "0.3.1" }
futures = "0.3.21"
log = "0.4.17"
flexi_logger = "0.22.5"
thiserror = "1.0.31"
once_cell = "1.13.0"
matrix-sdk-appservice = { git = "https://github.com/matrix-org/matrix-rust-sdk.git" }
async-trait = "0.1.57"