[package]
name = "threematrix"
version = "0.1.0"
edition = "2021"

[dependencies]
#threema-gateway = { git = "https://github.com/bitbetterde/threema-gateway-rs.git" }
threema-gateway = { path = "../threema-gateway-rs" }
tokio = { version = "1", features = ["full"] }
actix-web = "4"
rand = "0.8.5"
toml = "0.5.9"
serde = "1.0.137"
serde_derive = "^1.0"
matrix-sdk = "0.5.0"
signal-hook = "0.3.14"
signal-hook-tokio = { features = ["futures-v0_3"], version = "0.3.1" }
futures = "0.3.21"
log = "0.4.17"
flexi_logger = "0.22.5"
thiserror="1.0.31"
serde_json = "1.0.83"
data-encoding = "2.3.2"
reqwest = "0.11.11"
bytes = "1.2.1"
hex = "0.4.3"
mime = "0.3.16"
async-trait = "0.1.57"
